added empty test project for the parser part.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 
 .DS_Store
+
+muscr/test/parser/.idea/encodings.xml
+
+muscr/test/parser/.idea/misc.xml
+
+muscr/test/parser/.idea/modules.xml
+
+muscr/test/parser/.idea/parser.iml
+
+muscr/test/parser/.idea/workspace.xml
+
+muscr/test/.idea/encodings.xml
+
+muscr/test/.idea/misc.xml
+
+muscr/test/.idea/modules.xml
+
+muscr/test/.idea/test.iml
+
+muscr/test/.idea/workspace.xml
