added 'pitch_class' rule and test case.

--- a/muscr/test/CMakeLists.txt
+++ b/muscr/test/CMakeLists.txt
@@ -19,7 +19,8 @@ set(SOURCE_FILES
         parser/parser_test.cpp
         parser/lex_test.cpp
         parser/qi_test.cpp
-        parser/leadsheet_property_test.cpp)
+        parser/leadsheet_property_test.cpp
+        parser/leadsheet_section_test.cpp)
 
 add_executable(muscr_parser_test ${SOURCE_FILES})
 
