added empty files for muscr leadsheet rule.

--- a/muscr/test/CMakeLists.txt
+++ b/muscr/test/CMakeLists.txt
@@ -20,7 +20,8 @@ set(SOURCE_FILES
         parser/lex_test.cpp
         parser/qi_test.cpp
         parser/leadsheet_property_test.cpp
-        parser/leadsheet_section_test.cpp)
+        parser/leadsheet_section_test.cpp
+        parser/leadsheet_test.cpp)
 
 add_executable(muscr_parser_test ${SOURCE_FILES})
 
