--- a/muscr/test/CMakeLists.txt
+++ b/muscr/test/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCE_FILES
         parser/leadsheet_section_test.cpp
         parser/leadsheet_staff_test.cpp
         generator/leadsheet_js_song_test.cpp
+        generator/leadsheet_js_duration_test.cpp
         muscr_to_ljs_conversion_test.cpp
         division_ratio_test.cpp)
 
